Missing vaccines data rendered on page

--- a/vaccinated/templates/home.html
+++ b/vaccinated/templates/home.html
@@ -5,6 +5,9 @@
     <title>Home</title>
 </head>
 <body>
-
+    <script type='text/javascript'>
+        var dat = {{ missing_vaccinations|safe }};
+        console.log(dat)
+    </script>
 </body>
 </html>
