--- a/vaccinated/templates/sign_in.html
+++ b/vaccinated/templates/sign_in.html
@@ -215,8 +215,8 @@ form .button {
             <button>LOGIN</button>
         </div>
     </form>
-    <div class="signup">
-        Not a member? <a href="#">Sign Up</a>
+    <div class="signup" >
+        Not a member? <a id="signup" href="#">Sign Up</a>
     </div>
 </div>
 <script>
@@ -226,6 +226,10 @@ form .button {
         submit: document.querySelector(".button"),
         messages: document.getElementById("form-messages")
     };
+
+    document.querySelector("#signup").addEventListener("click", () => {
+        window.location.href = "http://127.0.0.1:8000/pages/sign_up";
+    })
 
     form.submit.addEventListener("click", async (e) => {
         e.preventDefault();
