--- a/vaccinated/templates/sign_up.html
+++ b/vaccinated/templates/sign_up.html
@@ -286,7 +286,7 @@
                 
                 if (response.status === 201) {
                     // Successful login, redirect to google.com
-                    window.location.href = "http://127.0.0.1:8000/pages/home";
+                    window.location.href = "http://127.0.0.1:8000/pages/sign_in";
                 } else {
                     // Display error message
                     alert("User creation failed, try again")
