--- a/vaccinated/templates/sign_up.html
+++ b/vaccinated/templates/sign_up.html
@@ -194,7 +194,7 @@
             <input class="city_input" name="city" type="text" placeholder="Enter your city" required />
           </div>
           <div class="column">
-            <input class="street_no_input" name="region" type="text" placeholder="Enter your region" required />
+            <input class="street_no_input" name="region" type="text" placeholder="Enter your street no" required />
             <input class="zip_code_input" name="zip_code" type="number" placeholder="Enter postal code" required />
           </div>
         </div>
